--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="active"><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
