--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
                 <h4>Programming 1</h4>
                 <p>Programming</p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="blogposts/knights-shortest-paths.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
