--- a/portfolio.html
+++ b/portfolio.html
@@ -74,15 +74,15 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-math">Math</li>
-              <li data-filter=".filter-programming">Programming</li>
+              <li data-filter=".math">Math</li>
+              <li data-filter=".programming">Programming</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-programming">
+          <div class="col-lg-4 col-md-6 portfolio-item programming">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
