--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Knight's Shortest Path's</h4>
+                <h4>Knight's Shortest Paths</h4>
                 <p>Programming</p>
                 <div class="portfolio-links">
                   <a href="blogposts/knights-shortest-paths.html"><i class="bx bx-link"></i></a>
