--- a/blogposts/knights-shortest-paths.html
+++ b/blogposts/knights-shortest-paths.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About</title>
+  <title>Blog Title</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
+  <!-- Late -->
   <script type="text/javascript" src="../assets/js/latex.js"></script>
   
   <!-- Favicons -->
